# 42_pipex_pair

./: .gitignore
google_tests/: CMakeLists.txt  exec_pipex.cpp  get_fullpath.cpp  main.cpp  parser.cpp  validate.cpp
notes/: project.md
works/: Makefile  main.c  main_bonus.c  pipex.c  pipex.h
works/includes/: pipex.h  pipex_bonus.h  shared.h  typedefs.h  xsyscall.h
works/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+6 more)
works/srcs/: ft_xutils.c  get_fullpath.c  pipex.c
works/srcs/pipex/: parser.c  validate.c
works/srcs/pipex_bonus/: parser.c  validate.c
works/srcs/shared/: exec_pipex.c  get_fullpath.c
works/srcs/xsyscall/: xclose.c  xdup2.c  xfork.c  xopen.c  xpipe.c  xwaitpid.c
